# Universal-Card-Software

./: CBankCardDecorator.h  CBankCardReader.h  CCard.h  CInsurancePolicyDecorator.h  CInsurancePolicyReader.h  CInternationalPassportDecorator.h  CInternationalPassportReader.h  CMakeLists.txt  CPasportDecorator.h  CPasportReader.h  Doxyfile  ICard.h  IReader.h  README.md  main.cpp  main2.cpp
html/: CCard_8h_source.html  CInternationalPassportReader_8h_source.html  CPasportDecorator_8h_source.html  CPasportReader_8h_source.html  ICard_8h_source.html  IReader_8h_source.html  classCBankCardDecorator__inherit__graph.dot  classCBankReader-members.html  classCBankReader__coll__graph.dot  classCCard__inherit__graph.dot  classCInsurancePolicyDecorator-members.html  classCInsurancePolicyDecorator__coll__graph.dot  classCInsurancePolicyReader__inherit__graph.dot  classCInternationalPasportDecorator-members.html  classCInternationalPasportDecorator__coll__graph.dot  classCInternationalPasportReader__inherit__graph.dot  classCPasportDecorator-members.html  classCPasportDecorator__coll__graph.dot  classCPasportReader__inherit__graph.dot  classICard.html  classIReader.html  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_0.md5  inherit_graph_1.dot  inherit_graph_1.md5  inherit_graph_2.dot  inherit_graph_2.md5  inherits.html  structInsuranceSituation-members.html  structInsuranceSituation.html
latex/: annotated.tex  classCBankCardDecorator.tex  classCBankCardDecorator.tex.tmp  classCBankCardDecorator__inherit__graph.dot  classCBankCardDecorator__inherit__graph.md5  classCBankReader.tex  classCBankReader__inherit__graph.dot  classCBankReader__inherit__graph.md5  classCCard.tex  classCCard__coll__graph.dot  classCCard__inherit__graph.md5  classCInsurancePolicyDecorator.tex  classCInsurancePolicyDecorator__coll__graph.dot  classCInsurancePolicyDecorator__coll__graph.md5  refman.tex  (+23 more)
(+13 files in other folders)
